--- a/src/Makefile
+++ b/src/Makefile
@@ -3,7 +3,7 @@ CXXFLAGS=-Wall -g -O -std=c++17
 
 OBJS_mc6809 = asm_mc6809.o dis_mc6809.o table_mc6809.o string_utils.o
 OBJS_hd6309 = asm_hd6309.o dis_hd6309.o table_hd6309.o string_utils.o
-OBJS_i8080 = dis_i8080.o table_i8080.o
+OBJS_i8080 = asm_i8080.o dis_i8080.o table_i8080.o string_utils.o
 
 .PHONY: clean-objs clean test
 
@@ -11,6 +11,7 @@ all: $(OBJS_mc6809) $(OBJS_hd6309) $(OBJS_i8080)
 
 asm_mc6809.o: asm_mc6809.h
 asm_hd6309.o: asm_hd6309.h
+asm_i8080.o: asm_i8080.h
 dis_mc6809.o: dis_mc6809.h string_utils.h table_mc6809.h
 dis_hd6309.o: dis_hd6309.h string_utils.h table_hd6309.h
 dis_i8080.o: dis_i8080.h string_utils.h table_i8080.h
@@ -21,6 +22,7 @@ table_i8080.o: config_i8080.h entry_i8080.h table_i8080.h text_i8080.h
 
 asm_mc6809.h: config_mc6809.h error_reporter.h symbol_table.h table_mc6809.h
 asm_hd6309.h: config_hd6309.h asm_mc6809.h table_mc6809.h
+asm_i8080.h: config_i8080.h error_reporter.h symbol_table.h table_i8080.h
 config_mc6809.h: config_host.h error_mc6809.h
 config_hd6309.h: config_host.h config_mc6809.h
 config_host.h:
