--- a/src/Makefile
+++ b/src/Makefile
@@ -24,8 +24,8 @@ asm_i8080.h:  config_i8080.h  error_reporter.h symbol_table.h table_i8080.h
 config_hd6309.h: config_host.h error_hd6309.h registers_hd6309.h
 config_i8080.h:  config_host.h error_i8080.h  registers_hd6309.h
 config_host.h:
-dis_hd6309.h: config_hd6309.h error_reporter.h memory.h symbol_table.h
-dis_i8080.h:  config_i8080.h  error_reporter.h memory.h symbol_table.h
+dis_hd6309.h: config_hd6309.h error_reporter.h insn_hd6309.h memory.h symbol_table.h
+dis_i8080.h:  config_i8080.h  error_reporter.h insn_i8080.h  memory.h symbol_table.h
 entry_hd6309.h: config_hd6309.h
 entry_i8080.h:  config_host.h
 error_hd6309.h: config_host.h
@@ -36,8 +36,8 @@ insn_i8080.h:  entry_i8080.h
 memory.h:
 string_utils.h:
 symbol_table.h: config_host.h
-table_hd6309.h: config_hd6309.h
-table_i8080.h:  config_i8080.h
+table_hd6309.h: config_hd6309.h insn_hd6309.h
+table_i8080.h:  config_i8080.h  insn_i8080.h
 text_hd6309.h: config_host.h
 text_i8080.h:  config_host.h
 
