Cleanup table_hd6309.cpp and fix Makefile

--- a/src/Makefile
+++ b/src/Makefile
@@ -22,12 +22,12 @@ table_i8080.o:  config_i8080.h  entry_i8080.h  table_i8080.h  text_i8080.h
 asm_hd6309.h: config_hd6309.h error_reporter.h symbol_table.h table_hd6309.h
 asm_i8080.h:  config_i8080.h  error_reporter.h symbol_table.h table_i8080.h
 config_hd6309.h: config_host.h error_hd6309.h registers_hd6309.h
-config_i8080.h:  config_host.h error_i8080.h  registers_hd6309.h
+config_i8080.h:  config_host.h error_i8080.h  registers_i8080.h
 config_host.h:
 dis_hd6309.h: config_hd6309.h error_reporter.h insn_hd6309.h memory.h symbol_table.h
 dis_i8080.h:  config_i8080.h  error_reporter.h insn_i8080.h  memory.h symbol_table.h
 entry_hd6309.h: config_hd6309.h
-entry_i8080.h:  config_host.h
+entry_i8080.h:  config_i8080.h
 error_hd6309.h: config_host.h
 error_i8080.h:  config_host.h
 error_reporter.h : config_host.h
