Add Z80 assembler test

--- a/test/Makefile
+++ b/test/Makefile
@@ -4,11 +4,11 @@ TESTS= \
 	test_asm_mc6809 test_asm_hd6309 \
 	test_dis_mc6809 test_dis_hd6309 \
 	test_asm_i8080  test_dis_i8080 \
-	test_dis_z80
+	test_asm_z80    test_dis_z80
 OBJS= \
 	asm_hd6309.o dis_hd6309.o registers_hd6309.o table_hd6309.o \
 	asm_i8080.o  dis_i8080.o  registers_i8080.o  table_i8080.o \
-	dis_z80.o registers_z80.o table_z80.o \
+	asm_z80.o    dis_z80.o    registers_z80.o    table_z80.o \
 	string_utils.o
 
 .PHONY: clean clean-obj test \
@@ -26,6 +26,7 @@ test_i8080:  test_asm_i8080  test_dis_i8080
 	./test_dis_i8080
 	./test_asm_i8080
 test_z80:  test_dis_z80
+	./test_asm_z80
 	./test_dis_z80
 
 test_asm_mc6809: test_asm_mc6809.o asm_hd6309.o registers_hd6309.o table_hd6309.o string_utils.o
@@ -33,6 +34,8 @@ test_asm_mc6809: test_asm_mc6809.o asm_hd6309.o registers_hd6309.o table_hd6309.
 test_asm_hd6309: test_asm_hd6309.o asm_hd6309.o registers_hd6309.o table_hd6309.o string_utils.o
 	$(CXX) -o $@ $(CXXFLAGS) $^
 test_asm_i8080:  test_asm_i8080.o  asm_i8080.o  registers_i8080.o  table_i8080.o  string_utils.o
+	$(CXX) -o $@ $(CXXFLAGS) $^
+test_asm_z80:    test_asm_z80.o    asm_z80.o    registers_z80.o    table_z80.o    string_utils.o
 	$(CXX) -o $@ $(CXXFLAGS) $^
 test_dis_mc6809: test_dis_mc6809.o dis_hd6309.o registers_hd6309.o table_hd6309.o string_utils.o
 	$(CXX) -o $@ $(CXXFLAGS) $^
@@ -46,6 +49,7 @@ test_dis_z80  :  test_dis_z80.o    dis_z80.o    registers_z80.o    table_z80.o  
 test_asm_mc6809.o: asm_hd6309.h test_asm_helper.h
 test_asm_hd6309.o: asm_hd6309.h test_asm_helper.h
 test_asm_i8080.o:  asm_i8080.h  test_asm_helper.h
+test_asm_z80.o:    asm_z80.h    test_asm_helper.h
 test_dis_mc6809.o: dis_hd6309.h test_dis_helper.h
 test_dis_hd6309.o: dis_hd6309.h test_dis_helper.h
 test_dis_i8080.o:  dis_i8080.h  test_dis_helper.h
