Choose hd6309/mc6809 in compile time

--- a/test/Makefile
+++ b/test/Makefile
@@ -8,7 +8,7 @@ TESTS= \
 	test_asm_i8080  test_dis_i8080 \
 	test_asm_z80    test_dis_z80
 OBJS= \
-	asm_hd6309.o dis_hd6309.o registers_hd6309.o table_hd6309.o \
+	registers_hd6309.o table_hd6309.o table_mc6809.o \
 	dis_r65c02.o table_r65c02.o \
 	asm_i8080.o  dis_i8080.o  registers_i8080.o  table_i8080.o \
 	asm_z80.o    dis_z80.o    registers_z80.o    table_z80.o \
@@ -40,17 +40,17 @@ test_z80: test_asm_z80 test_dis_z80
 	./test_asm_z80
 	./test_dis_z80
 
-test_asm_mc6809: test_asm_mc6809.o asm_hd6309.o registers_hd6309.o table_hd6309.o string_utils.o
+test_asm_mc6809: test_asm_mc6809.o registers_hd6309.o table_mc6809.o string_utils.o
 	$(CXX) -o $@ $(CXXFLAGS) $^
-test_asm_hd6309: test_asm_hd6309.o asm_hd6309.o registers_hd6309.o table_hd6309.o string_utils.o
+test_asm_hd6309: test_asm_hd6309.o registers_hd6309.o table_mc6809.o table_hd6309.o string_utils.o
 	$(CXX) -o $@ $(CXXFLAGS) $^
 test_asm_i8080:  test_asm_i8080.o  asm_i8080.o  registers_i8080.o  table_i8080.o  string_utils.o
 	$(CXX) -o $@ $(CXXFLAGS) $^
 test_asm_z80:    test_asm_z80.o    asm_z80.o    registers_z80.o    table_z80.o    string_utils.o
 	$(CXX) -o $@ $(CXXFLAGS) $^
-test_dis_mc6809: test_dis_mc6809.o dis_hd6309.o registers_hd6309.o table_hd6309.o string_utils.o
+test_dis_mc6809: test_dis_mc6809.o registers_hd6309.o table_mc6809.o string_utils.o
 	$(CXX) -o $@ $(CXXFLAGS) $^
-test_dis_hd6309: test_dis_hd6309.o dis_hd6309.o registers_hd6309.o table_hd6309.o string_utils.o
+test_dis_hd6309: test_dis_hd6309.o registers_hd6309.o table_mc6809.o table_hd6309.o string_utils.o
 	$(CXX) -o $@ $(CXXFLAGS) $^
 test_dis_r6502:  test_dis_r6502.o  dis_r65c02.o table_r65c02.o string_utils.o
 	$(CXX) -o $@ $(CXXFLAGS) $^
