--- a/test/Makefile
+++ b/test/Makefile
@@ -9,7 +9,7 @@ TESTS= \
 	test_asm_z80    test_dis_z80
 OBJS= \
 	registers_hd6309.o table_hd6309.o table_mc6809.o \
-	dis_r65c02.o table_r65c02.o \
+	dis_r65c02.o table_r6502.o table_r65c02.o \
 	asm_i8080.o  dis_i8080.o  registers_i8080.o  table_i8080.o \
 	asm_z80.o    dis_z80.o    registers_z80.o    table_z80.o \
 	string_utils.o
@@ -52,9 +52,9 @@ test_dis_mc6809: test_dis_mc6809.o registers_hd6309.o table_mc6809.o string_util
 	$(CXX) -o $@ $(CXXFLAGS) $^
 test_dis_hd6309: test_dis_hd6309.o registers_hd6309.o table_mc6809.o table_hd6309.o string_utils.o
 	$(CXX) -o $@ $(CXXFLAGS) $^
-test_dis_r6502:  test_dis_r6502.o  dis_r65c02.o table_r65c02.o string_utils.o
+test_dis_r6502:  test_dis_r6502.o  table_r6502.o string_utils.o
 	$(CXX) -o $@ $(CXXFLAGS) $^
-test_dis_r65c02: test_dis_r65c02.o dis_r65c02.o table_r65c02.o string_utils.o
+test_dis_r65c02: test_dis_r65c02.o table_r6502.o table_r65c02.o string_utils.o
 	$(CXX) -o $@ $(CXXFLAGS) $^
 test_dis_i8080:  test_dis_i8080.o  dis_i8080.o  registers_i8080.o  table_i8080.o  string_utils.o
 	$(CXX) -o $@ $(CXXFLAGS) $^
