Add TMS9995 disassembler

--- a/test/Makefile
+++ b/test/Makefile
@@ -6,6 +6,7 @@ TESTS= \
 	test_asm_r6502  test_dis_r6502 \
 	test_asm_r65c02 test_dis_r65c02 \
 	test_asm_i8080  test_dis_i8080 \
+	test_dis_tms9995 \
 	test_asm_z80    test_dis_z80
 COM_OBJS = string_utils.o test_asserter.o
 OBJS_mc6809 = registers_hd6309.o table_mc6809.o
@@ -15,16 +16,19 @@ OBJS= $(COM_OBJS) \
 	$(OBJS_mc6809) table_hd6309.o \
 	table_r6502.o table_r65c02.o \
 	asm_i8080.o  dis_i8080.o  $(OBJS_i8080) \
+	dis_tms9995.o table_tms9995.o \
 	asm_z80.o    dis_z80.o    $(OBJS_Z80) \
 
 .PHONY: clean clean-obj test \
 	test_mc6809 test_hd6309 \
 	test_r6502 test_r65c02 \
-	test_i8080 test_z80
+	test_i8080 test_z80 \
+	test_tms9995
 
 test: test_mc6809 test_hd6309 \
 	test_r6502 test_r65c02 \
-	test_i8080 test_z80
+	test_i8080 test_z80 \
+	test_tms9995
 
 test_mc6809: test_asm_mc6809 test_dis_mc6809
 	./test_asm_mc6809
@@ -41,6 +45,8 @@ test_r65c02: test_asm_r65c02 test_dis_r65c02
 test_i8080:  test_asm_i8080  test_dis_i8080
 	./test_asm_i8080
 	./test_dis_i8080
+test_tms9995:test_dis_tms9995
+	./test_dis_tms9995
 test_z80: test_asm_z80 test_dis_z80
 	./test_asm_z80
 	./test_dis_z80
@@ -68,6 +74,8 @@ test_dis_r65c02: test_dis_r65c02.o table_r6502.o table_r65c02.o $(COM_OBJS)
 	$(CXX) -o $@ $(CXXFLAGS) $^
 test_dis_i8080:  test_dis_i8080.o dis_i8080.o $(OBJS_i8080) $(COM_OBJS)
 	$(CXX) -o $@ $(CXXFLAGS) $^
+test_dis_tms9995:test_dis_tms9995.o dis_tms9995.o table_tms9995.o $(COM_OBJS)
+	$(CXX) -o $@ $(CXXFLAGS) $^
 test_dis_z80  :  test_dis_z80.o dis_z80.o $(OBJS_z80) $(COM_OBJS)
 	$(CXX) -o $@ $(CXXFLAGS) $^
 
@@ -82,6 +90,7 @@ test_dis_hd6309.o: dis_hd6309.h test_dis_helper.h test_asserter.h test_memory.h 
 test_dis_r6502.o:  dis_r65c02.h test_dis_helper.h test_asserter.h test_memory.h test_symtab.h
 test_dis_r65c02.o: dis_r65c02.h test_dis_helper.h test_asserter.h test_memory.h test_symtab.h
 test_dis_i8080.o:  dis_i8080.h  test_dis_helper.h test_asserter.h test_memory.h test_symtab.h
+test_dis_tms9995.o:dis_tms9995.h test_dis_helper.h test_asserter.h test_memory.h test_symtab.h
 test_dis_z80.o:    dis_z80.h    test_dis_helper.h test_asserter.h test_memory.h test_symtab.h
 
 test_asserter.o: test_asserter.h
