Add TMS9995 assembler

--- a/src/Makefile
+++ b/src/Makefile
@@ -5,7 +5,7 @@ OBJS_hd6309 = registers_hd6309.o table_mc6809.o table_hd6309.o \
 OBJS_r65c02 = table_r6502.o table_r65c02.o string_utils.o
 OBJS_i8080 =  asm_i8080.o  dis_i8080.o  registers_i8080.o  table_i8080.o \
 	string_utils.o
-OBJS_tms9995 = dis_tms9995.o table_tms9995.o
+OBJS_tms9995 = asm_tms9995.o dis_tms9995.o table_tms9995.o
 OBJS_z80 =    asm_z80.o    dis_z80.o    registers_z80.o    table_z80.o \
 	string_utils.o
 
@@ -14,6 +14,7 @@ OBJS_z80 =    asm_z80.o    dis_z80.o    registers_z80.o    table_z80.o \
 all: $(OBJS_hd6309) $(OBJS_r65c02) $(OBJS_i8080) $(OBJS_tms9995) $(OBJS_z80)
 
 asm_i8080.o:  asm_i8080.h
+asm_tms9995.o:asm_tms9995.h
 asm_z80.o:    asm_z80.h
 dis_i8080.o:  dis_i8080.h  string_utils.h table_i8080.h
 dis_tms9995.o:dis_tms9995.h string_utils.h table_tms9995.h
@@ -34,6 +35,7 @@ asm_hd6309.h: asm_hd6309_impl.h config_hd6309.h error_reporter.h symbol_table.h 
 asm_hd6309_impl.h:
 asm_r65c02.h: asm_r65c02_impl.h config_r65c02.h error_reporter.h symbol_table.h table_r65c02.h
 asm_r65c02_impl.h:
+asm_tms9995.h:config_tms9995.h error_reporter.h symbol_table.h table_tms9995.h
 asm_i8080.h:  config_i8080.h  error_reporter.h symbol_table.h table_i8080.h
 asm_z80.h:    config_z80.h    error_reporter.h symbol_table.h table_z80.h
 config_hd6309.h: config_host.h error_hd6309.h registers_hd6309.h
