--- a/test/Makefile
+++ b/test/Makefile
@@ -51,7 +51,7 @@ OBJS_mc6809 = table_mc6809.o  reg_hd6309.o
 OBJS_hd6309 = table_hd6309.o  $(OBJS_mc6809)
 OBJS_r6502  = table_r6502.o
 OBJS_r65c02 = table_r65c02.o  $(OBJS_r6502)
-OBJS_i8080  = table_i8080.o   registers_i8080.o
+OBJS_i8080  = table_i8080.o   reg_i8080.o
 OBJS_tms9995= table_tms9995.o
 OBJS_z80    = table_z80.o     registers_z80.o
 OBJS        = \
