Rename MC6809/HD309 asm/disasm types

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,7 +2,7 @@ CXXFLAGS=-Wall -g -O -std=c++17
 CPPFLAGS=-MMD
 
 OBJS_common  = string_utils.o
-OBJS_hd6309  = table_mc6809.o table_hd6309.o registers_hd6309.o
+OBJS_hd6309  = table_mc6809.o table_hd6309.o reg_hd6309.o
 OBJS_r65c02  = table_r6502.o table_r65c02.o
 OBJS_i8080   = asm_i8080.o   dis_i8080.o   table_i8080.o registers_i8080.o
 OBJS_tms9995 = asm_tms9995.o dis_tms9995.o table_tms9995.o
