Add C-style constant parser as default

--- a/test/Makefile
+++ b/test/Makefile
@@ -34,9 +34,10 @@ test_tms9995:test_asm_tms9995 test_dis_tms9995
 test_z80: test_asm_z80 test_dis_z80
 	./test_asm_z80
 	./test_dis_z80
-test_expr: test_expr_moto test_expr_intel
+test_expr: test_expr_moto test_expr_intel test_expr_cstyle
 	./test_expr_moto
 	./test_expr_intel
+	./test_expr_cstyle
 
 CXXFLAGS    = -Wall -g -std=c++17 -O -I$(VPATH)
 CPPFLAGS    = -MMD
@@ -49,7 +50,8 @@ TEST_OBJS= \
 	test_asm_i8080.o   test_dis_i8080.o \
 	test_asm_tms9995.o test_dis_tms9995.o \
 	test_asm_z80.o     test_dis_z80.o \
-	test_expr_moto.o   test_expr_intel.o
+	test_expr_moto.o   test_expr_intel.o \
+	test_expr_cstyle.o
 TESTS=$(TEST_OBJS:.o=)
 
 OBJS_common = test_asserter.o asm_operand.o dis_operand.o
@@ -102,6 +104,8 @@ test_dis_z80:    test_dis_z80.o      dis_z80.o     $(OBJS_z80)     $(OBJS_common
 test_expr_moto:  test_expr_moto.o  $(OBJS_common)
 	$(CXX) -o $@ $(CXXFLAGS) $^
 test_expr_intel: test_expr_intel.o $(OBJS_common)
+	$(CXX) -o $@ $(CXXFLAGS) $^
+test_expr_cstyle:test_expr_cstyle.o $(OBJS_common)
 	$(CXX) -o $@ $(CXXFLAGS) $^
 
 clean: clean-obj
