[CLI] Fix symbol table issue

--- a/cli/Makefile
+++ b/cli/Makefile
@@ -1,5 +1,5 @@
 VPATH=../src
-CXXFLAGS=-Wall -g -std=c++17 -I../src
+CXXFLAGS=-Wall -g -O -std=c++17 -I../src
 CPPFLAGS=-MMD
 
 OBJS_common = asm_operand.o dis_operand.o file_util.o
