[DIS] Fix register name is always uppercase

--- a/cli/Makefile
+++ b/cli/Makefile
@@ -5,11 +5,11 @@ CPPFLAGS=-MMD
 OBJS_common  = file_util.o
 OBJS_asm     = asm_operand.o
 OBJS_dis     = dis_operand.o
-OBJS_mc6809  = table_mc6809.o  reg_mc6809.o $(OBJS_common)
-OBJS_m6502   = table_m6502.o   $(OBJS_common)
-OBJS_i8080   = table_i8080.o   reg_i8080.o  $(OBJS_common)
-OBJS_z80     = table_z80.o     reg_z80.o    $(OBJS_common)
-OBJS_tms9900 = table_tms9900.o $(OBJS_common)
+OBJS_mc6809  = table_mc6809.o  reg_mc6809.o  $(OBJS_common)
+OBJS_m6502   = table_m6502.o   reg_m6502.o   $(OBJS_common)
+OBJS_i8080   = table_i8080.o   reg_i8080.o   $(OBJS_common)
+OBJS_z80     = table_z80.o     reg_z80.o     $(OBJS_common)
+OBJS_tms9900 = table_tms9900.o reg_tms9900.o $(OBJS_common)
 OBJS_as6809   = as6809.o   asm_mc6809.o  $(OBJS_asm) $(OBJS_mc6809)  $(OBJS_common)
 OBJS_as6502   = as6502.o   asm_m6502.o   $(OBJS_asm) $(OBJS_m6502)   $(OBJS_common)
 OBJS_as8080   = as8080.o   asm_i8080.o   $(OBJS_asm) $(OBJS_i8080)   $(OBJS_common)
